@@ -51,25 +51,22 @@ VECTORIZED_MATH_1(expm1      , ::expm1          )
 VECTORIZED_MATH_1(log1p      , ::log1p          )
 
 namespace Rcpp{
-namespace internal{
-
-extern "C" inline double factorial( double x ){
-    return ::Rf_gammafn( x + 1.0 ) ;
-}
-extern "C" inline double lfactorial( double x ){
-    return ::Rf_lgammafn( x + 1.0 ) ;
-}
-
-}
+    namespace internal{
+        extern "C" inline double factorial( double x ){ return ::Rf_gammafn( x + 1.0 ) ; }
+        extern "C" inline double lfactorial( double x ){ return ::Rf_lgammafn( x + 1.0 ) ; }
+    }
 }
 VECTORIZED_MATH_1(factorial  , ::Rcpp::internal::factorial   )
 VECTORIZED_MATH_1(lfactorial , ::Rcpp::internal::lfactorial  )
- 
 
 SUGAR_BLOCK_2(choose    , ::Rf_choose   )
 SUGAR_BLOCK_2(lchoose   , ::Rf_lchoose  )
 SUGAR_BLOCK_2(beta      , ::Rf_beta     )
 SUGAR_BLOCK_2(lbeta     , ::Rf_lbeta    )
 SUGAR_BLOCK_2(psigamma  , ::Rf_psigamma )
+
+VECTORIZED_MATH_1(trunc, ::Rf_ftrunc) 		// truncates to zero (cf Writing R Extension, 6.7.3 Numerical Utilities)
+SUGAR_BLOCK_2(round,     ::Rf_fround)           // rounds 'x' to 'digits' decimals digits (used by R's round())
+SUGAR_BLOCK_2(signif,    ::Rf_fprec)            // rounds 'x' to 'digits' significant digits (used by R's signif())
 
 #endif
