@@ -1,5 +1,8 @@
 0.9.14  2012-xx-yy
 
+    o   Added new Rcpp sugar functions trunc(), round() and signif(), as well
+        as unit tests for them
+
     o   Be more conservative about where we support clang++ and the inclusion
         of exception_defines.h and prevent this from being attempted on OS X
         where it failed for clang 3.1
